# CodexLAG

./: .gitignore  .impeccable.md  AGENTS.md  CLAUDE.md  components.json  difloqmaijonomcpqre8ifr8h3ebmap6.darc  index.html  manifest  package-lock.json  package.json  tsconfig.json  vite.config.ts
.beads/: config.yaml  metadata.json
scripts/: check-source-comments.mjs  run-cargo-test-isolated.mjs
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/src/: bootstrap.rs  error.rs  lib.rs  main.rs  models.rs  secret_store.rs  state.rs  tray.rs  tray_summary.rs
src-tauri/src/auth/: callback.rs  mod.rs  openai.rs  openai_claims.rs  session_store.rs
src-tauri/src/commands/: accounts.rs  keys.rs  logs.rs  mod.rs  policies.rs  relays.rs
src-tauri/src/db/: migrations.rs  mod.rs  repositories.rs
src-tauri/src/gateway/: auth.rs  host.rs  mod.rs  routes.rs  runtime_routing.rs  server.rs
src-tauri/src/logging/: diagnostics.rs  mod.rs  redaction.rs  runtime.rs  usage.rs
src-tauri/src/providers/: capabilities.rs  claude.rs  gemini.rs  generic_openai.rs  inventory.rs  invocation.rs  mod.rs  official.rs  registry.rs  relay.rs
src-tauri/src/routing/: candidates.rs  engine.rs  mod.rs  policy.rs
src-tauri/tests/: auth_profile_runtime.rs  balance_refresh.rs  bootstrap_default_key.rs  command_surface.rs  error_contract.rs  failure_recovery.rs  foundation_alignment.rs  gateway_auth.rs  gateway_failover.rs  gateway_host.rs  gateway_provider_integration.rs  generic_openai_provider.rs  newapi_balance.rs  newapi_provider_integration.rs  observability_e2e.rs  official_provider_integration.rs  openai_auth_flow.rs  openai_claims.rs  openai_oauth_bridge.rs  openai_session_refresh.rs  platform_key_issuance.rs  policy_schema_roundtrip.rs  provider_capabilities.rs  provider_diagnostics.rs  provider_inventory.rs  provider_inventory_v12.rs  provider_registry.rs  provider_registry_v12.rs  request_attempt_logging.rs  request_lifecycle_persistence.rs  request_logging.rs  routing_engine.rs  runtime_candidate_inventory.rs  runtime_composition.rs  runtime_event_schema.rs  runtime_log_metadata.rs  runtime_logging.rs  secret_store_persistence.rs  security_regression.rs  tray_restart.rs
(+87 files in other folders)
